EDAProject_New/force-app/main/default/objects/hed__Course_Enrollment__c/fields/Faculty_Name__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Name__c</fullName>
    <formula>hed__Course_Offering__r.hed__Faculty__r.FirstName &amp; &quot; &quot; &amp; hed__Course_Offering__r.hed__Faculty__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faculty Name</label>
    <type>Text</type>
</CustomField>