EDAProject_New/force-app/main/default/objects/hed__Course_Enrollment__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <formula>if( hed__Contact__r.FirstName &amp;&quot; &quot;&amp; hed__Contact__r.LastName =  Faculty_Name__c ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running User</label>
    <type>Checkbox</type>
</CustomField>