EDAProject_New/force-app/main/default/objects/hed__Course_Enrollment__c/fields/Section_Number__c.field-meta.xml
<CustomField>
    <fullName>Section_Number__c</fullName>
    <formula>hed__Course_Offering__r.hed__Section_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Number</label>
    <type>Text</type>
</CustomField>