EDAProject_New/force-app/main/default/objects/hed__Course_Enrollment__c/listViews/My_Courses.listView-meta.xml
<ListView>
    <fullName>My_Courses</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>hed__Course_Offering__c</columns>
    <columns>Faculty_Name__c</columns>
    <columns>Section_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>hed__Contact__c</field>
        <operation>equals</operation>
        <value>Andrew Smith</value>
    </filters>
    <filters>
        <field>hed__Status__c</field>
        <operation>equals</operation>
        <value>Current</value>
    </filters>
    <label>My Courses</label>
</ListView>